Updated readme and text on razor pages

--- a/WeatherFinderAPI/Pages/Index.cshtml
+++ b/WeatherFinderAPI/Pages/Index.cshtml
@@ -12,8 +12,9 @@
         <p>
             This ASP.NET Core application is the backend to an Angular Frontend. 
             The application as a whole provides a way to store locations and get their weather. 
-            This application provides a REST API to GET, DELETE, and POST to a SQL Database in Azure. 
-            A link to the Angular frontend can be found in the readme of this <a href="https://github.com/Kameron2442/weatherFinder-Angular">Github Repo</a>
+            This backend provides a REST API to GET, DELETE, and POST to a SQL Database in Azure. 
+            Angular frontend repo can be found at <a href="https://github.com/Kameron2442/weatherFinder-Angular">github.com/Kameron2442/weatherFinder-Angular</a>
+            and the live Angular site is at <a href="https://weatherfinder-angular.netlify.app/">weatherfinder-angular.netlify.app</a>
         </p>
 
     </div>
