--- a/WeatherFinderAPI/Pages/About.cshtml
+++ b/WeatherFinderAPI/Pages/About.cshtml
@@ -12,8 +12,8 @@
         <p>
             This was created by me, Kameron Bourgeois, as a way to learn about building a REST API with ASP.NET Core.
             It goes with an Angular front-end which is linked to on the home page. 
-            This is hosted as an app on Azure and uses their free SQL Database for new accounts so this will go down mid 2021.
-            This app supports GET, DELETE, and POST. 
+            This backend is being hosted on free tiers of Azure so it may be a bit slow at times.
+            This app supports GET, DELETE, and POST requests. 
         </p>
 
     </div>
